--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,7 @@ buildscript {
     ext{
         kotlin_version = "1.5.0"
         version_coroutine = "1.3.7"
-        hilt_version = '2.35'
+        hilt_version = '2.37'
     }
 
 
@@ -12,9 +12,9 @@ buildscript {
         mavenCentral()
     }
     dependencies {
-        classpath "com.android.tools.build:gradle:4.1.2"
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-        classpath("androidx.navigation:navigation-safe-args-gradle-plugin:2.3.5")
+        classpath 'com.android.tools.build:gradle:7.0.0'
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.5.20"
+        classpath("androidx.navigation:navigation-safe-args-gradle-plugin:2.5.0")
         classpath "com.google.dagger:hilt-android-gradle-plugin:$hilt_version"
 
         // NOTE: Do not place your application dependencies here; they belong
