Added settings.xml, pref_resources.xml and implemented Settings screen UI

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -83,4 +83,7 @@ dependencies {
     // Hilt dependencies
     implementation "com.google.dagger:hilt-android:$hilt_version"
     kapt "com.google.dagger:hilt-android-compiler:$hilt_version"
+
+    // Preference library - Kotlin
+    implementation 'androidx.preference:preference-ktx:1.1.1'
 }
